# opengl-experiments

./: .gitignore
Project1/: cmakeMinGWMake.bat
Project1/source/: CMakeLists.txt  main.cpp
Project1/source/projects/: CMakeLists.txt
Project1/source/projects/Engine/: CMakeLists.txt
Project1/source/projects/HelloWorld/: main.cpp
Project1/source/projects/ModelLoading/: CMakeLists.txt  entity.h  main.cpp  object.h  vectorTest.cpp
Projects/: cmakeBlock.bat  cmakeVS.bat
Projects/build-vs-2013/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PlaneProject.vcxproj  PlaneProject.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  myproject.sln
Projects/build-vs-2013/projects/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
Projects/build-vs-2013/projects/Engine/: Engine.vcxproj  Engine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  shader.vs.txt
Projects/build-vs-2013/projects/HelloWorld/: HelloWorld.vcxproj  HelloWorld.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
Projects/build-vs-2013/projects/ModelLoading/: INSTALL.vcxproj  INSTALL.vcxproj.filters  ModelLoading.vcxproj  ModelLoading.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
Projects/build-vs-2013/projects/OGLdev_3/: INSTALL.vcxproj  INSTALL.vcxproj.filters  OGLdev_3.vcxproj  OGLdev_3.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
Projects/source/: COPYING  plane.cpp
Projects/source/projects/: CMakeLists.txt
Projects/source/projects/Engine/: CMakeLists.txt  ComponentEnemy.cpp  ComponentEnemy.h  ComponentPlayer.cpp  ComponentPlayer.h  main.cpp
Projects/source/projects/Engine/Engine/: ComponentBase.cpp  ComponentBase.h  ComponentSprite.cpp  ComponentSprite.h  ComponentTransform.cpp  ComponentTransform.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  KECS.h  SystemBase.cpp  SystemBase.h  SystemDisplay.cpp  SystemDisplay.h  SystemInput.cpp  SystemInput.h  Vector2.cpp  Vector2.h
Projects/source/projects/Engine/Engine/Utils/: Common.cpp  Common.h  EngineTime.cpp  EngineTime.h  OpenGLUtil.cpp  OpenGLUtil.h
Projects/source/projects/HelloWorld/: CMakeLists.txt
Projects/source/projects/ModelLoading/: entity.cpp  game.cpp  game.h  myTypes.h  object.cpp  vector2D.cpp  vector2D.h
Projects/source/projects/OGLdev_3/: CMakeLists.txt  main.cpp
dependencies/SFML-build/: CMakeCache.txt  Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/: CMakeCache.txt  Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/ftp/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/opengl/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/pong/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/shader/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/sockets/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/sound/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/sound_capture/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/voip/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/win32/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/examples/window/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/Audio/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/Graphics/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/Main/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/Network/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/System/: Makefile  cmake_install.cmake
dependencies/SFML-build-exmp/src/SFML/Window/: Makefile  cmake_install.cmake
dependencies/SFML-build-static/: CMakeCache.txt  Makefile  cmake_install.cmake
dependencies/SFML-build-static-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
dependencies/SFML-build-static-vs/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dependencies/SFML-build-static-vs/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
dependencies/SFML-build-static-vs/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-graphics.vcxproj  sfml-graphics.vcxproj.filters
dependencies/SFML-build-static-vs/src/SFML/Main/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-main.vcxproj
dependencies/SFML-build-static-vs/src/SFML/Network/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-network.vcxproj  sfml-network.vcxproj.filters
dependencies/SFML-build-static-vs/src/SFML/System/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-system.vcxproj  sfml-system.vcxproj.filters
dependencies/SFML-build-static-vs/src/SFML/Window/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-window.vcxproj  sfml-window.vcxproj.filters
dependencies/SFML-build-static/src/SFML/: Makefile  cmake_install.cmake
dependencies/SFML-build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
dependencies/SFML-build-vs/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dependencies/SFML-build/src/SFML/: Makefile  cmake_install.cmake
(+53 files in other folders)
